<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".PasswordNewActivity">

    <EditText
        android:id="@+id/oldPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:hint="@string/old_password_hint"/>

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:hint="@string/new_password_hint"/>

    <EditText
        android:id="@+id/reNewPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:hint="@string/re_new_password_hint"/>

    <Button
        android:id="@+id/changeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_button" />

    <TextView
        android:id="@+id/notifyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>