<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".PasswordForgotActivity">

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:hint="@string/username_hint"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signInA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/a"
                android:padding="10dp"
                android:text="@string/sign_in_a"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signUpA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/a"
                android:padding="10dp"
                android:text="@string/sign_up_a"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/notifyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>