<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".VerifyPhoneActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:text="@string/first_notify_verify_email_notify"/>

    <Button
        android:id="@+id/verifyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/skipA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/a"
            android:padding="10dp"
            android:text="@string/skip_a"/>
    </LinearLayout>

    <TextView
        android:id="@+id/notifyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>